--- a/a.html
+++ b/a.html
@@ -1,4 +1,7 @@
-<!-- <script type="text/javascript">
+
+
+
+<script type="text/javascript">
   var _paq = window._paq || [];
   /* tracker methods like "setCustomDimension" should be called before "trackPageView" */
   _paq.push(["disableCookies"]);
@@ -424,7 +427,7 @@
     }
   })();
 </script>
-<script type="text/javascript"> -->
+<script type="text/javascript">
 
 <html
   class="js flexbox canvas canvastext webgl no-touch geolocation postmessage websqldatabase indexeddb hashchange history draganddrop websockets rgba hsla multiplebgs backgroundsize borderimage borderradius boxshadow textshadow opacity cssanimations csscolumns cssgradients cssreflections csstransforms csstransforms3d csstransitions fontface generatedcontent video audio localstorage sessionstorage webworkers no-applicationcache svg inlinesvg smil svgclippaths"
